--- a/app/src/main/res/values-v21/strings.xml
+++ b/app/src/main/res/values-v21/strings.xml
@@ -8,4 +8,5 @@
     <string name="title_activity_add_category">Add category</string>
     <string name="title_notes_list">Your notes</string>
     <string name="title_note_detail">Note details</string>
+    <string name="add_note">Add note</string>
 </resources>
