--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -99,4 +99,6 @@
     <string name="title_activity_add_category">Add category</string>
     <string name="title_notes_list">Your notes</string>
     <string name="title_note_detail">Note details</string>
+    <string name="add_note">Add note</string>
+    <string name="title_categories_list">Categories</string>
 </resources>
